# pipeline_duckdb_prefect

./: .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 7299a2b770a2_.py  7a389eb5c967_.py
src/pipeline/: __init__.py  db.py
src/pipeline/configs/: __init__.py  configurations.py
src/pipeline/models/: __init__.py  articles.py  publication.py
src/pipeline/orchestrate/: import.py  orchestrate_pipeline.py
src/pipeline/transform/: main.py
src/pipeline/transform/validator/: articles.py  publications.py
