[project]
name = "duckdb-prefect-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.0",
    "msgspec>=0.19.0",
    "prefect>=3.4.19",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.29.0",
    "alembic>=1.16.5",
]
