[project]
name = "duckdb-prefect-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.0",
    "msgspec>=0.19.0",
    "prefect>=3.4.19",
    "sqlalchemy[asyncio]>=2.0.43",
    "asyncpg>=0.29.0",
    "alembic>=1.16.5",
    "python-dotenv>=1.0.0",
    "ruff>=0.13.1",
    "isort>=6.0.1",
    "psycopg2>=2.9.10",
    "pre-commit>=4.3.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "isort>=5.12.0",
]
